Сделан блок со слоганами (блок под слайдером)

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <p class="header_tel">8 (495) 120-81-55</p>
         </section>
     </header>
-    <div class="swiper center">
+    <section class="swiper center">
         <div class="swiper-wrapper">
             <div class="swiper-slide">
                 <article class="swiper_slide_first">
@@ -281,12 +281,42 @@
         </div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
+    </section>
+    <section class="slogan center">
+        <ul class="slogan_list">
+            <li class="slogan_item">
+                <img src="img/lifebuoy.png" alt="lifebuoy">
+                <div class="slogan_item_ellipse">
+                </div>
+                <div class="slogan_item_ellipse_txt">
+                    <p class="slogan_item_ellipse_title">Профессиональный подбор цвета</p>
+                    <p class="slogan_item_ellipse_subtitle">Отвечаем на вопросы покупателей в течение 10 минут</p>
+                </div>
+            </li>
+            <li class="slogan_item">
+                <img src="img/paints.png" alt="paints">
+                <div class="slogan_item_ellipse">
+                </div>
+                <div class="slogan_item_ellipse_txt">
+                    <p class="slogan_item_ellipse_title">Широкий выбор красок</p>
+                    <p class="slogan_item_ellipse_subtitle">Дарим подарки и скидки до 70% всем покупателям</p>
+                </div>
+            </li>
+            <li class="slogan_item">
+                <img src="img/clock.png" alt="clock">
+                <div class="slogan_item_ellipse">
+                </div>
+                <div class="slogan_item_ellipse_txt">
+                    <p class="slogan_item_ellipse_title">Гарантия качества продукции</p>
+                    <p class="slogan_item_ellipse_subtitle">Соответствуем требованиям и стандартам качества</p>
+                </div>
+            </li>
+        </ul>
+    </section>
 
-    </div>
 
 
 
-    
     <script src="script.js"></script>
 
 </body>
