Начат блок с категориями. Сделан первый слайдер-свайпер(требует корректировок), сделана основа для второго слайдера. Также сделан заголовок для этого блока

--- a/index.html
+++ b/index.html
@@ -313,6 +313,100 @@
             </li>
         </ul>
     </section>
+    <section class="category center">
+        <div class="category_title">
+            <p class="category_title_txt">Популярные категории</p>
+            <button class="all_category">Все категории
+                <svg class="all_category_icon" xmlns="http://www.w3.org/2000/svg" width="24" height="25" viewBox="0 0 24 25" fill="none">
+                    <path d="M14.4302 6.42993L20.5002 12.4999L14.4302 18.5699" stroke="url(#paint0_linear_2090_1140)"
+                        stroke-width="2" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M3.5 12.5H20.33" stroke="url(#paint1_linear_2090_1140)" stroke-width="2"
+                        stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
+                    <defs>
+                        <linearGradient id="paint0_linear_2090_1140" x1="14.4302" y1="6.42993" x2="21.2006" y2="6.77831"
+                            gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#DD3197" />
+                            <stop offset="1" stop-color="#822FAF" />
+                        </linearGradient>
+                        <linearGradient id="paint1_linear_2090_1140" x1="3.5" y1="12.5" x2="8.20568" y2="20.6502"
+                            gradientUnits="userSpaceOnUse">
+                            <stop stop-color="#DD3197" />
+                            <stop offset="1" stop-color="#822FAF" />
+                        </linearGradient>
+                    </defs>
+                </svg>
+            </button>
+        </div>
+
+        <div class="swiper_container">
+            <div class="swiper_wrapper">
+                <div class="swiper_slide">
+                    <a class="swiper_link" href="#">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path
+                                d="M9.75603 1.23311C10.0868 0.919449 10.6 0.923745 10.9308 1.2374C12.1013 2.35024 13.1998 3.54901 14.2261 4.8466C14.6926 4.22788 15.2228 3.5533 15.7953 3.00333C16.1304 2.68538 16.6478 2.68538 16.9828 3.00763C18.4502 4.42553 19.6929 6.29887 20.5665 8.07769C21.4275 9.83073 22 11.6224 22 12.8857C22 18.3682 17.7674 23 12.5 23C7.17321 23 3 18.3639 3 12.8814C3 11.2314 3.75491 9.2163 4.92545 7.22265C6.10871 5.19893 7.77969 3.08926 9.75603 1.23311ZM12.5721 18.8752C13.6451 18.8752 14.5951 18.5744 15.49 17.9729C17.2754 16.7097 17.7547 14.1832 16.6817 12.1982C16.4908 11.8115 16.0031 11.7857 15.7275 12.1123L14.6587 13.3712C14.3788 13.6977 13.8741 13.6891 13.6112 13.3497C12.9114 12.4474 11.6603 10.8361 10.9478 9.92096C10.6806 9.57722 10.1717 9.57293 9.90022 9.91666C8.46674 11.7427 7.74576 12.8942 7.74576 14.1875C7.75 17.1308 9.89598 18.8752 12.5721 18.8752Z"
+                                fill="#FF4345" />
+                        </svg>
+                        Акции
+                    </a>
+                </div>
+                <div class="swiper_slide">
+                    <a class="swiper_link" href="#">Для внутренних работ</a>
+                </div>
+                <div class="swiper_slide">
+                    <a class="swiper_link" href="#">Для наружных работ</a>
+                </div>
+                <div class="swiper_slide">
+                    <a class="swiper_link" href="#">Универсальные</a>
+                </div>
+                <div class="swiper_slide">
+                    <a class="swiper_link" href="#">Специального назначения</a>
+                </div>
+                <div class="swiper_slide">
+                    <a class="swiper_link" href="#">Грунтовки</a>
+                </div>
+                <div class="swiper_slide">
+                    <a class="swiper_link" href="#">Специального назначения</a>
+                </div>
+                <div class="swiper_slide">
+                    <a class="swiper_link" href="#">Специального назначения</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="slider_container">
+            <ul class="slider">
+                <li class="slide">
+                    <img src="img/category_1.png" alt="Image 1">
+                </li>
+                <li class="slide">
+                    <img src="img/category_2.png" alt="Image 2">
+                </li>
+                <li class="slide">
+                    <img src="img/category_3.png" alt="Image 3">
+                </li>
+                <li class="slide">
+                    <img src="img/category_4.png" alt="Image 4">
+                </li>
+                <li class="slide">
+                    <img src="img/category_1.png" alt="Image 1">
+                </li>
+                <li class="slide">
+                    <img src="img/category_2.png" alt="Image 2">
+                </li>
+                <li class="slide">
+                    <img src="img/category_3.png" alt="Image 3">
+                </li>
+                <li class="slide">
+                    <img src="img/category_4.png" alt="Image 4">
+                </li>
+            </ul>
+            <button class="prev_button"></button>
+            <button class="next_button"></button>
+        </div>
+    </section>
+
+
 
 
 
