--- a/index.html
+++ b/index.html
@@ -649,6 +649,153 @@
             </div>
         </section>
     </main>
+    <footer class="footer center" id="footer">
+        <div class="footer_container">
+            <ul class="footer_container_list">
+                <li class="footer_column footer_column_logo">
+                    <div class="main_logo_wrp footer_logo">
+                        <a href="#" class="main_logo">
+                            <img src="img/main_logo.png" alt="main_logo">
+                        </a>
+                    </div>
+                    <div class="footer_grade_wrp">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <path
+                                d="M5.96463 21.924C5.43389 22.188 4.83164 21.7253 4.93889 21.1347L6.08013 14.8282L1.23602 10.3537C0.783649 9.93507 1.01877 9.16976 1.62515 9.0871L8.35988 8.15913L11.3629 2.38999C11.6337 1.87 12.3666 1.87 12.6375 2.38999L15.6405 8.15913L22.3752 9.0871C22.9816 9.16976 23.2167 9.93507 22.763 10.3537L17.9202 14.8282L19.0615 21.1347C19.1687 21.7253 18.5665 22.188 18.0357 21.924L11.9981 18.9161L5.96463 21.924Z"
+                                fill="#E50E78" />
+                        </svg>
+                        <p class="footer_grade"></p>
+                    </div>
+                    <button class="footer_btn_to_director">Написать директору</button>
+                </li>
+                <li class="footer_column footer_column_tel_em_link">
+                    <ul class="footer_column_tel_em_link_wrp">
+                        <li class="footer_tel footer_column_title">
+                            <p class="footer_tel_title" href="">Телефон</p>
+                            <p class="footer_tel_subtitle">8 (495) 120-81-55</p>
+
+                        </li>
+                        <li class="footer_em footer_column_em">
+                            <p class="footer_em_title">Электронная почта</p>
+                            <a class="mail_address footer_em" href="mailto:info@kraskizdes.ru">info@kraskizdes.ru</a>
+                        </li>
+                        <li class="footer_link">
+                            <a href="#footer" class="footer_link_item_vk"><img src="img/vk_icon.svg" alt="vk"></a>
+                            <a href="#footer" class="footer_link_item_youtube"><img src="img/youtube_icon.svg"
+                                    alt="youtube"></a>
+                        </li>
+                        <li class="footer_link">
+                            <div class=""><img src="img/pay_system.svg" alt="pay_system"></div>
+                        </li>
+                    </ul>
+                </li>
+                <li class="footer_column footer_column_about">
+                    <p class="footer_column_title">
+                        О комании
+                    </p>
+                    <ul class="footer_column_about_wrp">
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">О нас</a>
+                        </li>
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">Бренды</a>
+                        </li>
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">Вакансии</a>
+                        </li>
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">Для бизнеса</a>
+                        </li>
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">Магазины</a>
+                        </li>
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">Оплата</a>
+                        </li>
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">Доставка</a>
+                        </li>
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">Акции</a>
+                        </li>
+                        <li class="footer_column_about_link_wrp">
+                            <a href="#footer" class="footer_about_link">Помощь</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class=" footer_column footer_column_catalog">
+                    <p class="footer_column_title">
+                        Каталог
+                    </p>
+                    <ul class="footer_column_catalog_wrp">
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Спецпредложение</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Краски для внутренних работ</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Краски для наружных работ</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Краски универсальные</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Краски специального назначения</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Антисептики, пропитки, лазури для
+                                дерева и
+                                камня</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Лаки, масла, воски</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Грунтовки</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Декоративные штукатурки, фактурные
+                                краски</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Декоративные дизайнерские краски</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Монтажные пены и очистители</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Клея, герметики, гидроизоляция</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Затирки, сухие смеси</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Растворители и очистители,
+                                спецсредства</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Малярные инструменты, краскопульты</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Морилки по дереву</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Стеклообои, малярный флизелин, обои под
+                                покраску</a>
+                        </li>
+                        <li class="footer_column_catalog_link_wrp">
+                            <a href="#footer" class="footer_calumn_catalog_link">Каталоги цветов, колеровочные карты</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <div class="footer_line">
+            </div>
+            <p class="footer_underline_txt">© 2023 Интернет-магазин лакокрасочной продукции</p>
+        </div>
+
+    </footer>
 
 
 
